--- a/index.html
+++ b/index.html
@@ -32,12 +32,25 @@
     <button onclick="openRandomProject()">Open Random Project</button>
 
     <script>
-        function openRandomProject() {
+        async function openRandomProject() {
             // Generate a random number for the Scratch project ID
             const randomProjectID = Math.floor(Math.random() * 100000000); // Adjust the range as needed
-            
-            // Redirect to the Scratch project page
-            window.location.href = `https://scratch.mit.edu/projects/${randomProjectID}/`;
+            const url = `https://scratch.mit.edu/projects/${randomProjectID}/`;
+
+            try {
+                // Check if the project exists by making a fetch request to the Scratch API
+                const response = await fetch(`https://api.scratch.mit.edu/projects/${randomProjectID}`);
+                
+                if (response.ok) {
+                    // Open the project in a new tab if it exists
+                    window.open(url, '_blank');
+                } else {
+                    alert('The generated project does not exist. Please try again.');
+                }
+            } catch (error) {
+                console.error('Error checking project existence:', error);
+                alert('An error occurred. Please try again.');
+            }
         }
     </script>
 </body>
