--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 
     <script>
         async function openRandomProject() {
-            // Generate a random number for the Scratch project ID
-            const randomProjectID = Math.floor(Math.random() * 100000000); // Adjust the range as needed
-            const url = `https://scratch.mit.edu/projects/${randomProjectID}/`;
+            while (true) {
+                // Generate a random number for the Scratch project ID
+                const randomProjectID = Math.floor(Math.random() * 100000000); // Adjust the range as needed
+                const url = `https://scratch.mit.edu/projects/${randomProjectID}/`;
 
-            try {
-                // Check if the project exists by making a fetch request to the Scratch API
-                const response = await fetch(`https://api.scratch.mit.edu/projects/${randomProjectID}`);
-                
-                if (response.ok) {
-                    // Open the project in a new tab if it exists
-                    window.open(url, '_blank');
-                } else {
-                    alert('The generated project does not exist. Please try again.');
+                try {
+                    // Check if the project exists by making a fetch request to the Scratch API
+                    const response = await fetch(`https://api.scratch.mit.edu/projects/${randomProjectID}`);
+
+                    if (response.ok) {
+                        // Open the project in a new tab if it exists
+                        window.open(url, '_blank');
+                        break;
+                    }
+                } catch (error) {
+                    console.error('Error checking project existence:', error);
                 }
-            } catch (error) {
-                console.error('Error checking project existence:', error);
-                alert('An error occurred. Please try again.');
             }
         }
     </script>
