--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             height: 100vh;
             margin: 0;
             background-color: #f4f4f9;
@@ -22,32 +23,48 @@
             font-size: 16px;
             cursor: pointer;
             border-radius: 5px;
+            margin-bottom: 20px;
         }
         button:hover {
             background-color: #45a049;
+        }
+        #status {
+            font-size: 16px;
+            color: #333;
         }
     </style>
 </head>
 <body>
     <button onclick="openRandomProject()">Open Random Project</button>
+    <div id="status">Click the button to start.</div>
 
     <script>
         async function openRandomProject() {
+            const statusElement = document.getElementById('status');
+            statusElement.textContent = 'Loading...';
+
             while (true) {
                 // Generate a random number for the Scratch project ID
                 const randomProjectID = Math.floor(Math.random() * 100000000); // Adjust the range as needed
                 const url = `https://scratch.mit.edu/projects/${randomProjectID}/`;
+
+                // Update status to show the current project being tested
+                statusElement.textContent = `Testing project ID: ${randomProjectID}`;
 
                 try {
                     // Check if the project exists by making a fetch request to the Scratch API
                     const response = await fetch(`https://api.scratch.mit.edu/projects/${randomProjectID}`);
 
                     if (response.ok) {
-                        // Open the project in a new tab if it exists
+                        statusElement.textContent = `Success! Redirecting to project ID: ${randomProjectID}`;
                         window.open(url, '_blank');
                         break;
+                    } else {
+                        const reason = response.status === 404 ? 'Project not found' : `Error: ${response.status}`;
+                        statusElement.textContent = `Failed for project ID: ${randomProjectID} (${reason}). Trying another...`;
                     }
                 } catch (error) {
+                    statusElement.textContent = `Failed for project ID: ${randomProjectID} (Network error). Trying another...`;
                     console.error('Error checking project existence:', error);
                 }
             }
