--- a/index.html
+++ b/index.html
@@ -52,20 +52,16 @@
                 statusElement.textContent = `Testing project ID: ${randomProjectID}`;
 
                 try {
-                    // Check if the project exists by making a fetch request to the Scratch API
-                    const response = await fetch(`https://api.scratch.mit.edu/projects/${randomProjectID}`);
+                    // Fetch the project page HTML
+                    const response = await fetch(url);
+                    const text = await response.text();
 
-                    if (response.ok) {
-                        const projectData = await response.json();
-                        if (projectData && projectData.title) {
-                            statusElement.textContent = `Success! Redirecting to project ID: ${randomProjectID}`;
-                            window.open(url, '_blank');
-                            break;
-                        } else {
-                            statusElement.textContent = `Failed for project ID: ${randomProjectID} (Invalid project data). Trying another...`;
-                        }
+                    if (response.ok && !text.includes('Whoops! Our server is scratching its head')) {
+                        statusElement.textContent = `Success! Redirecting to project ID: ${randomProjectID}`;
+                        window.open(url, '_blank');
+                        break;
                     } else {
-                        const reason = response.status === 404 ? 'Project not found' : `Error: ${response.status}`;
+                        const reason = text.includes('Whoops! Our server is scratching its head') ? 'Project not found (server error)' : `Error: ${response.status}`;
                         statusElement.textContent = `Failed for project ID: ${randomProjectID} (${reason}). Trying another...`;
                     }
                 } catch (error) {
